Added files to gitIgnore

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ build/
 .flutter-plugins
 .flutter-plugins-dependencies
 .flutter-plugins-dependencies
+.flutter-plugins
+.flutter-plugins-dependencies
